# df-update-notifier

./: .gitignore  LICENSE  README.md  latest_update.json  main.py  parse_releases.py  pyproject.toml  releases.rss  rss.py  template.rss.jinja
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: check-for-updates.yml
