[project]
name = "df-update-notificator"
version = "0.1.0"
description = "A script that checks DF steam page for updates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120
